--- a/addons.css
+++ b/addons.css
@@ -55,16 +55,6 @@ a{
     color: hsl(231, 11%, 63%);
 }
 
-input{
-    width: 50vw;
-    height: 50px;
-    margin: 5px 0 50px 0;
-    outline: none;
-    border: 1px solid #000;
-    border-radius: 5px;
-    opacity: 40%;
-}
-
 .step{
     letter-spacing: 3px;
 }
@@ -90,92 +80,47 @@ input{
     color: hsl(213, 96%, 18%);
 }
 
+
 /*main section styles*/
 
 .cards{
     width: 50vw;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
     gap: 20px;
     margin-bottom: 50px;
 }
 
 .card{
-    display: flex;
-    flex-direction: column;
-    gap: 100px;
+    display: grid;
+    grid-template-columns: 0.5fr 6fr 3fr;
     border: 1px solid #ccc;
-    padding: 10px;
+    padding: 30px;
     border-radius: 10px;
+    align-items: center;
     cursor: pointer;
 }
 
-.card:hover{
-    border: 1px solid hsl(213, 96%, 18%);
+input{
+    cursor: pointer;
+    width: 20px;
+    height: 20px;
 }
 
-/*.card:{
-    background-color: hsl(231, 11%, 63%);
-}*/
-
-.plan{
+.card-header{
     margin-bottom: 5px;
-    color: hsl(213, 96%, 18%);
     font-weight: bold;
+    color: hsl(213, 96%, 18%);
 }
 
-.price{
+.description{
     color: hsl(231, 11%, 63%);
 }
 
-.billing{
+.price{
     display: flex;
-    width: 50vw;
-    height: 70px;
-    background-color: #ccc;
-    gap: 50px;
-    justify-content: center;
-    align-items: center;
-    border-radius: 15px;
-}
-
-input[type="checkbox"]{
-    height: 0;
-    width: 0;
-    visibility: hidden;
-}
-
-label{
-    cursor: pointer;
-    text-indent: -9999px;
-    width: 60px;
-    height: 30px;
-    background: gray;
-    display: block;
-    border-radius: 100px;
-    position: relative;
-    bottom: 33px;
-}
-
-.toggle-switch label::after{
-    content: "";
-    position: absolute;
-    top: 5px;
-    left: 5px;
-    width: 20px;
-    height: 20px;
-    background: #fff;
-    border-radius: 90px;
-    transition: 0.3s;
-}
-
-input:checked + label{
-    background: hsl(213, 96%, 18%);
-}
-
-input:checked + label::after{
-    left: calc(100% - 5px);
-    transform: translateX(-100%);
+    justify-content: end;
+    color: hsl(213, 96%, 18%);
 }
 
 .back{
@@ -198,14 +143,4 @@ input:checked + label::after{
     background-color: hsl(213, 96%, 18%);
     color: #fff;
     border: none;
-}
-
-.monthly{
-    color: hsl(213, 96%, 18%);
-    font-weight: bold;
-}
-
-.yearly{
-    color: hsl(231, 11%, 63%);
-    font-weight: bold;
 }
