--- a/thank.css
+++ b/thank.css
@@ -46,45 +46,45 @@ a{
     place-items: center;
  }
 
- .step{
-    letter-spacing: 3px;
- }
-
-.uno{
-    background-color: hsl(206, 94%, 87%);
-    color: hsl(213, 96%, 18%);
-}
-
 .heading{
     margin: 50px 0 15px 0;
-    font-size: 40px;
     color: hsl(213, 96%, 18%);
+    font-size: 40px;
 }
 
 .paragraph{
     margin-bottom: 50px;
     color: hsl(231, 11%, 63%);
+    font-size: 20px;
 }
 
-label{
-    color: hsl(213, 96%, 18%);
+.step{
+    letter-spacing: 3px;
 }
 
-input{
-    width: 50vw;
-    height: 50px;
-    margin: 5px 0 50px 0;
-    outline: none;
-    border: 1px solid #000;
-    border-radius: 5px;
-    opacity: 40%;
-}
 
-button{
+.next{
     position: absolute;
     bottom: 30px;
     right: 240px;
     padding: 10px 20px;
     border-radius: 5px;
     cursor: pointer;
+}
+
+/*main section styles*/
+
+.content{
+    margin: auto;
+}
+
+.icon{
+    display: flex;
+    justify-content: center;
+}
+
+.words{
+    
+    width: 50vw;
+    text-align: center;
 }
