--- a/style.css
+++ b/style.css
@@ -81,10 +81,75 @@ input{
 }
 
 button{
-    position: absolute;
-    bottom: 30px;
-    right: 240px;
+    position: relative;
+    top: 260px;
+    left: 620px;
     padding: 10px 20px;
     border-radius: 5px;
     cursor: pointer;
+    background-color: hsl(213, 96%, 18%);
+    color: #fff;
+    border: none;
+}
+
+/*media queries*/
+
+@media  screen and (max-width: 390px){
+    body{
+        flex-direction: column;
+        margin: 0;
+    }
+
+    .sidebar{
+        width: 100%;
+        height: 25vh;
+        background-size: cover;
+        background-repeat: repeat;
+        background-position: center;
+        display: grid;
+        place-items: center;    
+    }
+
+    .sidebar-container{
+        display: flex;
+        width: 50%;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .info{
+        display: none;
+    }
+
+    .content{
+        background-color: hsl(217, 100%, 97%);
+        height: 100vh;
+    }
+
+    form{
+        width: 85vw;
+        margin: auto;
+        background-color: #fff;
+        position: relative;
+        bottom: 80px;
+        padding: 20px;
+        border-radius: 10px;  
+    }
+
+    .heading{
+        margin: 10px 0;
+    }
+
+    .paragraph{
+        margin-bottom: 20px;
+    }
+
+    input{
+        margin-bottom: 10px;
+    }
+
+    .bt-1{
+        top: 270px;
+        left: 220px;
+    }
 }
