--- a/summary.css
+++ b/summary.css
@@ -7,7 +7,7 @@
     font-family: Ubuntu;
 }
 
-body{
+.main-section{
     display: flex;
     margin: 15px 30px;
 }
@@ -97,6 +97,7 @@ a{
     align-items: center;
     cursor: pointer;
     background-color: hsl(231, 100%, 99%);
+    margin-bottom: 50px;
 }
 
 .arcade{
@@ -182,10 +183,13 @@ a{
     cursor: pointer;
     font-size: 15px;
     font-weight: bold;
+}
+
+.back a{
     color: hsl(231, 11%, 63%);
 }
 
-.back:hover{
+.back a:hover{
     color: hsl(213, 96%, 18%);
 }
 
@@ -195,6 +199,95 @@ a{
     border: none;
 }
 
+.next a{
+    color: #fff;
+}
+
 .next:active{
     background-color: hsl(243, 100%, 62%);
+}
+
+@media screen and (max-width: 390px){
+    body{
+        overflow: hidden;
+    }
+
+    .main-section{
+        flex-direction: column;
+        margin: 0;
+        height: 90vh;
+        background-color: hsl(217, 100%, 97%);
+    }
+
+    .sidebar{
+        width: 100%;
+        height: 25vh;
+        background-size: cover;
+        background-repeat: repeat;
+        background-position: center;
+        display: grid;
+        place-items: center;    
+    }
+
+    .sidebar-container{
+        display: flex;
+        width: 50%;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .info{
+        display: none;
+    }
+
+    .content{
+        width: 85vw;
+        margin: auto;
+        position: relative;
+        bottom: 130px;
+        padding: 20px;
+        border-radius: 10px;  
+        background-color: #fff;
+    }
+
+    .cards{
+        display: flex;
+        flex-direction: column;
+        margin: auto;
+        width: 98%;
+        margin-bottom: 20px;
+    }
+
+    .card{
+        gap: 10px;
+        flex-direction: row;
+        padding: 10px;
+        height: 20vh;
+    }
+    .price{
+        font-size: 13px;
+    }
+
+    .heading{
+        margin: 10px 0;
+        font-size: 35px;
+    }
+
+    .paragraph{
+        margin-bottom: 20px;
+    }
+
+    .total{
+        padding: 0 15px;
+    }
+
+    .buttons{
+        position: relative;
+        top: 290px;
+    }
+
+    .next{
+        position: relative;
+        left: 200px;
+    }
 }
