--- a/thank.css
+++ b/thank.css
@@ -88,3 +88,53 @@ a{
     width: 50vw;
     text-align: center;
 }
+
+@media screen and (max-width: 390px){
+    body{
+        flex-direction: column;
+        margin: 0;
+        height: 90vh;
+        background-color: hsl(217, 100%, 97%);
+    }
+
+    .sidebar{
+        width: 100%;
+        height: 25vh;
+        background-size: cover;
+        background-repeat: repeat;
+        background-position: center;
+        display: grid;
+        place-items: center;    
+    }
+
+    .sidebar-container{
+        display: flex;
+        width: 50%;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .info{
+        display: none;
+    }
+
+    .content{
+        width: 85vw;
+        margin: auto;
+        position: relative;
+        bottom: 170px;
+        padding: 20px;
+        border-radius: 10px;  
+        background-color: #fff;
+        display: grid;
+        place-items: center;
+
+    }
+
+    .heading{
+        font-size: 35px;
+    }
+    .paragraph{
+        font-size: 12px;
+    }
+}
