--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body{
 
 a{
     text-decoration: none;
+    color: #fff;
 }
 
 .sidebar-container{
@@ -82,8 +83,8 @@ input{
 
 button{
     position: relative;
-    top: 260px;
-    left: 620px;
+    top: 69px;
+    left: 580px;
     padding: 10px 20px;
     border-radius: 5px;
     cursor: pointer;
@@ -98,6 +99,7 @@ button{
     body{
         flex-direction: column;
         margin: 0;
+        height: 100vh;
     }
 
     .sidebar{
@@ -123,7 +125,7 @@ button{
 
     .content{
         background-color: hsl(217, 100%, 97%);
-        height: 100vh;
+        height: 65vh;
     }
 
     form{
@@ -131,7 +133,7 @@ button{
         margin: auto;
         background-color: #fff;
         position: relative;
-        bottom: 80px;
+        bottom: 70px;
         padding: 20px;
         border-radius: 10px;  
     }
@@ -149,7 +151,7 @@ button{
     }
 
     .bt-1{
-        top: 270px;
+        top: 260px;
         left: 220px;
     }
 }
